--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"friendlybros.aternos.me",
-	"port": "38943",
-	"name": "gonchu"
+	"ip":"serverofthelegends.aternos.me",
+	"port": "36225",
+	"name": "noobmon"
 }
